# extracover

./: .coveragerc  .gitignore  README.md  assemble_datasets.py  build_dataset.py  cluster.py  config.py  extract_match_data.py  gui.py  import_matches.py  ingest.py  load_db.py  matchlogger.py  parse_matches.py  partition_matches.py  pyproject.toml  radon.cfg  requirements.txt  runs_per_over.ipynb  schema.sql  spider_player_data.py  train_test.py  update_player_info.py
app/: config.py  match.py  notebook_utils.py  utils.py
app/ingest/: README.md  classes.py  cricinfo_player.py  extract_match_data.py  import_matches.py  match_writer.py  partition_matches.py  player_json_to_csv.py  spider_player_data.py  update_player_info.py
app/model/: TODO.md  __init__.py  balluator.py  batting_order_generator.py  bowling_order_generator.py  clustering.py  dataset_builder.py  match.py  over_rate.py  over_rate_profile.py  predicto.py  scorebook.py
app/notebooks/: __init__.py  ball_outcome_distributions.ipynb  notebook_utils.py  queries.ipynb  (+1 more)
doc/: about_data.md  ball_evaluation.md
matchday/: README.md  books_schema.sql
misc/: python_snippets.json
notebooks/: __init__.py  cluster_exploration.ipynb  clustering.ipynb  hdbscan.ipynb  k_means.ipynb  most_seen_bowlers.ipynb  over_rates.ipynb  runs_per_over.ipynb  simulating_bowling_order.ipynb
sidelined/: over_rate_profile.py  test_over_rate.py
tests/: conftest.py  test_extra.py  test_info.py  test_match.py  test_match_from_json.py  test_match_scorebook.py  test_match_writer.py  test_over.py  test_powerplay.py
(+73 files in other folders)
