[tool.pytest.ini_options]
testpaths = ["tests"]
mock_use_standalone_module = true

[project]
name = "extracover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bayesian-optimization>=2.0.3",
    "black>=24.10.0",
    "dataclass-csv>=1.4.0",
    "dataclasses-json>=0.6.7",
    "fastparquet>=2024.11.0",
    "fire>=0.7.0",
    "flake8>=7.1.1",
    "hdbscan>=0.8.40",
    "icecream>=2.1.4",
    "ipykernel>=6.29.5",
    "isort>=5.13.2",
    "jupysql>=0.10.17",
    "jupyter>=1.1.1",
    "kneed>=0.8.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "mccabe>=0.7.0",
    "mypy>=1.14.1",
    "nicegui>=2.10.1",
    "numpy>=2.2.2",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "plotly>=5.24.1",
    "pyarrow>=19.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-mock==3.14.0",
    "pytest-watcher>=0.4.3",
    "python-dateutil>=2.9.0.post0",
    "radon>=6.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.6.1",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "skimpy>=0.0.18",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "types-requests>=2.32.0.20241016",
]
